--- a/app/components/components.css
+++ b/app/components/components.css
@@ -1,3 +1,4 @@
+/* MainWeather styles */
 
 .temp {
     display: flex;
@@ -20,15 +21,41 @@
     display: flex;
     font-size: 1.5vh;
     gap: 2vh;
-        margin-top: 0.8vh;
+    margin-top: 0.8vh;
 }
 
-h1 {
-    margin-bottom: 0;
+/* Search styles */
+
+.search {
+    display: flex;
+    flex-direction: column;
+    padding-top: 13vh;
+    gap: 2vh;
+    align-items: center;
 }
 
-h2 {
-    margin-top: 0;
-    margin-bottom: 1vh;
-    font-size: 2.5vh;
+.search h1 {
+    font-weight: 100;
+    color: rgb(162, 176, 255);
+}
+
+.input {
+    background-color: rgb(179, 195, 255);
+    color: rgb(128, 128, 128);
+    border-radius: 5vh;
+    border: none;
+    font-family: inherit;
+    padding: 1.2vh;
+    width: 20vh;
+    transition: all 1s linear(0 0%, 0 2.27%, 0.02 4.53%, 0.04 6.8%, 0.06 9.07%, 0.1 11.33%, 0.14 13.6%, 0.25 18.15%, 0.39 22.7%, 0.56 27.25%, 0.77 31.8%, 1 36.35%, 0.89 40.9%, 0.85 43.18%, 0.81 45.45%, 0.79 47.72%, 0.77 50%, 0.75 52.27%, 0.75 54.55%, 0.75 56.82%, 0.77 59.1%, 0.79 61.38%, 0.81 63.65%, 0.85 65.93%, 0.89 68.2%, 1 72.7%, 0.97 74.98%, 0.95 77.25%, 0.94 79.53%, 0.94 81.8%, 0.94 84.08%, 0.95 86.35%, 0.97 88.63%, 1 90.9%, 0.99 93.18%, 0.98 95.45%, 0.99 97.73%, 1 100%);
+}
+
+.input:not(:placeholder-shown) {
+    width: 30vh;
+    border-radius: 1vh;
+    transition: all 1s linear(0 0%, 0.22 2.1%, 0.86 6.5%, 1.11 8.6%, 1.3 10.7%, 1.35 11.8%, 1.37 12.9%, 1.37 13.7%, 1.36 14.5%, 1.32 16.2%, 1.03 21.8%, 0.94 24%, 0.89 25.9%, 0.88 26.85%, 0.87 27.8%, 0.87 29.25%, 0.88 30.7%, 0.91 32.4%, 0.98 36.4%, 1.01 38.3%, 1.04 40.5%, 1.05 42.7%, 1.05 44.1%, 1.04 45.7%, 1 53.3%, 0.99 55.4%, 0.98 57.5%, 0.99 60.7%, 1 68.1%, 1.01 72.2%, 1 86.7%, 1 100%);
+}
+
+.input:focus {
+    outline: none;
 }
