--- a/app/page.css
+++ b/app/page.css
@@ -15,6 +15,13 @@ h2 {
     font-size: 2.5vh;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2vh;
+}
+
 button {
     border-radius: 1vh;
     font-family: inherit;
